--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"author": "FLS",
 	"license": "ISC",
 	"dependencies": {
+		"active-menu-link": "^1.1.8",
 		"aos": "^2.3.4",
 		"gulp-cli": "^2.3.0"
 	},
