--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 	"author": "FLS",
 	"license": "ISC",
 	"dependencies": {
+		"@emailjs/browser": "^3.10.0",
 		"active-menu-link": "^1.1.8",
 		"aos": "^2.3.4",
-		"gulp-cli": "^2.3.0"
+		"gulp-cli": "^2.3.0",
+		"jquery": "^3.6.1"
 	},
 	"devDependencies": {
 		"browser-sync": "latest",
