--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@emailjs/browser": "^3.10.0",
 		"active-menu-link": "^1.1.8",
+		"animejs": "^3.2.1",
 		"aos": "^2.3.4",
 		"gulp-cli": "^2.3.0",
 		"jquery": "^3.6.1"
